babel preset auf "preset-env" gestellt und browserlist hinzugefügt

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-<head>index.html</head>
+<head>
+    <title>index.html</title>
+</head>
 <body>
 <div id="app">Sollte ersetzt werden</div>
 </body>
